🧠 Refactor: Mapper 삭제
- Mapper -> of, toEntity로 변경
#