@@ -2,15 +2,14 @@ package com.maratang.jamjam.domain.attendee.dto;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import com.maratang.jamjam.domain.attendee.entity.Attendee;
 
-import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Getter;
 
 @Getter
-@AllArgsConstructor
+@Builder
 public class AttendeeDTO {
     private String address;
     private Double lat;
@@ -23,21 +22,21 @@ public class AttendeeDTO {
 
 
     public static AttendeeDTO of(Attendee attendee) {
-        return new AttendeeDTO(
-            attendee.getAddress(),
-            attendee.getLat(),
-            attendee.getLon(),
-            attendee.getNickname(),
-            attendee.getDuration(),
-            attendee.getRoute(),
-            attendee.getAttendeeUUID(),
-            attendee.getProfileImageUrl().getType() // ProfileType의 type 속성 값을 가져옴
-        );
+        return AttendeeDTO.builder().
+            address(attendee.getAddress())
+            .lat(attendee.getLat())
+            .lon(attendee.getLon())
+            .nickname(attendee.getNickname())
+            .duration(attendee.getDuration())
+            .route(attendee.getRoute())
+            .attendeeUUID(attendee.getAttendeeUUID())
+            .profileImageUrl(attendee.getProfileImageUrl().toString())
+            .build();
     }
 
     public static List<AttendeeDTO> of(List<Attendee> attendees) {
         return attendees.stream()
             .map(AttendeeDTO::of)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
